package ATV.Exception;

public class LivroNaoEncontradoException extends Exception {
    public LivroNaoEncontradoException(String mensagem) { super(mensagem); }
}