package ATV.Exception;

public class UsuarioNaoEncontradoException extends Exception {
    public UsuarioNaoEncontradoException(String mensagem) { super(mensagem); }
}