' Generated by UML Generator
' Encoded: pHhBSjisyEwlu55Eh4pFcZQDBCfJPHoF4yavjDC3HC8A9YIX0A3gSHh_L3-XFzR5-y67vIRfz2AQ-y9YiTWN_OeBn4HRLoVy8sdsYA4wAoh4-Lm8HhQjmAk2DcjoZxCVJZwG4cS5OKM5JquKLNPEjXMX0XSe-toIPTEA71Zbi-oISF7ZfNnvAS4jRn4Z3d6ZNnKArtk6kI2rmouTH17iCUC0nar1q2ox3juaTWe_pxqMazFaVPXRKHQeH5mmn9Ik4wM-L0CUfxFiG4aPKHd59sO_iym00jfjomiZxfgo1It9ZauAzPXbf16dHdmFxTz_FKvi5WJoLJaXfQKou5ww_0YwuqHTqHfF6lYPPMjmZsOtkEyD4Mr59q8z7gMUjuAo2PA_FRGLaKwgQFd2d4H9-QH3OXGT9zhGNh0MFmGtBedAeqXWHzwiDzPLj7K7DAQrz_fe2OPHHUuHysZZ7vVQLK7gMJQuYkNEyO5MRO6-CRCddke3zLhE1JaSjPfdaMkYaXI4DeYzRL4ZI8bAh6zcLz8dHz5LlAO7_5KYO2yCxs3lwP7l63hqWR7m7XG7Fucpv-omGGIK-EJmEs7mIpVU0hSAkSyZaBt7PrbuJSyoN2DIkRjbLhrcw9u6ZdMgM0roG_OAebaaKD05FwGW_NS0TQfwmK5gyF5iciPG2IkHG9uFY6c1gXm9R97N31_apN4-cT2eT11iALpqB4kNFCi65zIeiULEdxJKQUWbap2kU_UOnD4N47cadc8BTcifEbeE4OAe8HJm3g7A7jHJVO6BjeIxXhNBkjV_aRlEsQSMGjQgEK3KA-dohi1x0Q58Qpo4dTIuuMY7Qw-iawXEUDMKXEzfGmwuIcGEun-LUeNeie72J2MvFh7z16DoZUEDIHubwPSD1uJPBIfmjd9_ILaFwUd4-zCH8oY4v6jSJ4X8L34eG4FtZZw9xYuyXDd0U5yi-YoB1CEh5TjD6LyjK1x_BDjIMc7KM5StPQFtSEvWSNKOv1zJSaKEpnrui183Jbr-fOpZHPbaWqt4AYg8srjCxRDnp1F0XzCnuJcOIJ8QGqcWwHoWYcgSNCjGob08DK0F2jPKmcB3-qgceQpMXSy6tmcmdFmDBF2l8ymRHFH5ccvTofu56Jr8YfTq1tVBPOFifwnfgqeIB6Z3GUDPzbfgDuSQJLsDE-0WZO5U45oL6WnEOmgU5BCn3f72v_h0E-2cX_QjABl0bQ_mKjGQDnzWow-lmHn_K5Owr5PO_SzR8MYZOMj4M09QHFrQWZptJKM2kVIbVo_cnlMd4JAi3294K0_4qkYEjY82gf0ZZrwrfjCDhX1G1GwfG6lPbTOe15zjxaJ7-LvVeYrMZi1mIHZMnR9nYj3BKI63ClIxj-3Ek9o0nymLQ7d0KU5-Y-unKzOF5q_wuawXtm4FT57JkCy9CJsTJGysgcaiagEgfmY7jUez60FLUygLBmmXGqDz1lq4ARvajJmZn7RSclkttosPkyBX_41VPSG-NPgPnmMfi05vVmg0ot3IOU7AFKAnUe8HGO8rN089rmY0qHfX-HIqBJqp6bUlfXCQMOgDp6V6EYRrHnpT822JMmAKERWkX1aeUP4khBH1EaUiRcTCSvOfbpAw_9p11S5DoNrzyJ9oOwtKK6_c2COQD4SKTcbFCU9f_s1BbP8oAds4ocaYrCFx7bYUxp5JQK0L2iuAQIwsWbObL6PNeAXglLrbNKYN7-RIPKN86HKoZt3xxEqbe3IH3qk16ybnsgU3wAZaCBKRAZv4OxhK-FrZCysMpEswNjuTVxaxd_ZnTvjpgaYGBFPDx-f_CwT0Mvat2f55ROMsch6ohh9ylwVD4tHypXp9TFBHDZ4etlfcbLwwfrjA6PDOKbZHmQvNPLooHfFNeCHLIwPbzDZCL5bKBfyozIiLi7tVNZWQAMrWYRHiLTLTHEME3BI_sOS9LW3_WX44EJmULIKqoPP6QJToF_qKFPjmEtZOGr43hn2CeBHH7mIG-31UaPkmQnEmPJ1WduGJH9I8BKuQw24rq0FqAdWnL6_5s61G5EBVws2iB9YJMynKtL3IQmfL3sMtXDSTddTZvLT4qLU2AO8bBnWyc1cEy1H_UGng3h5_HnUqth0MNw2AumujQkHe-Qw04w4oMPJKpZWkAFEZY2Fu_0JZgPovQIYxqvLZrLs2aK50EF0vWjLO2TIriwUKQNuWN2VYagxA79izlaRBEmZFX8tHw-IVwyGxoF5EpzENV8yAog_egf53-kK5gNFALPFCknwhIoPx_cymkA3yog5bBE_0T1sc-T3mlr-V4Qe6oGFh4a8VHk4LvuD7i5PrvzBgxraN5202rLYEBHEcLRsNtPZQfFrQ9haLG2cNjuY_n_Uui-V8htBBhHSpBk2bGEI27N0uuxh_sjR0L9ehTQLjO1VGijG9u_gz2bf1ZCg3LRgXr1FwP73CE1y7_NFqdSSE-WSc_7r3_R6yqciCdoXwDcG7q7u_s89c7dlSucwOFPxG1kcKZbriF14TDloZ2YfAk7ln16w4y5pFn6H0Feuo3TkAT3aodelmSu4lP5Cu41aLyPKxP1kw_6uWDlwAMUVey-4He4Ilqv7a858App6vGuye23rxJI1y1ZsHQOYkg9pG26Rdh4zW75Kp3SnwfhUSzwsZl6pK2zPwCAeE4mZteC6ML6EaqaE6ADCF2yw1zU5RTmVsNw3BXRot7AXM57rKwnt9CvgsEbzmHsxYuqMdez2LTB0x-AdLMjU0ACWUmlSGLxB7CKumRj2HqkdKX8C4Q4Dn0Wv2SO1v1fZelslYRytJwPyldS3Ws-wB5m1tmvSGyyofbG2T5FTLC1Aklm0bSjNmN387rRc3MSveFFVYnSlE3Af3eFNhWAt0jFVtbkx3Z745DhSjSRB3RjCLRpS-o1w2aoHDzzdV8RedwL21gd6UL4YN6trQyWkzmatPrjK_
' URL: http://www.plantuml.com/plantuml/uml/pHhBSjisyEwlu55Eh4pFcZQDBCfJPHoF4yavjDC3HC8A9YIX0A3gSHh_L3-XFzR5-y67vIRfz2AQ-y9YiTWN_OeBn4HRLoVy8sdsYA4wAoh4-Lm8HhQjmAk2DcjoZxCVJZwG4cS5OKM5JquKLNPEjXMX0XSe-toIPTEA71Zbi-oISF7ZfNnvAS4jRn4Z3d6ZNnKArtk6kI2rmouTH17iCUC0nar1q2ox3juaTWe_pxqMazFaVPXRKHQeH5mmn9Ik4wM-L0CUfxFiG4aPKHd59sO_iym00jfjomiZxfgo1It9ZauAzPXbf16dHdmFxTz_FKvi5WJoLJaXfQKou5ww_0YwuqHTqHfF6lYPPMjmZsOtkEyD4Mr59q8z7gMUjuAo2PA_FRGLaKwgQFd2d4H9-QH3OXGT9zhGNh0MFmGtBedAeqXWHzwiDzPLj7K7DAQrz_fe2OPHHUuHysZZ7vVQLK7gMJQuYkNEyO5MRO6-CRCddke3zLhE1JaSjPfdaMkYaXI4DeYzRL4ZI8bAh6zcLz8dHz5LlAO7_5KYO2yCxs3lwP7l63hqWR7m7XG7Fucpv-omGGIK-EJmEs7mIpVU0hSAkSyZaBt7PrbuJSyoN2DIkRjbLhrcw9u6ZdMgM0roG_OAebaaKD05FwGW_NS0TQfwmK5gyF5iciPG2IkHG9uFY6c1gXm9R97N31_apN4-cT2eT11iALpqB4kNFCi65zIeiULEdxJKQUWbap2kU_UOnD4N47cadc8BTcifEbeE4OAe8HJm3g7A7jHJVO6BjeIxXhNBkjV_aRlEsQSMGjQgEK3KA-dohi1x0Q58Qpo4dTIuuMY7Qw-iawXEUDMKXEzfGmwuIcGEun-LUeNeie72J2MvFh7z16DoZUEDIHubwPSD1uJPBIfmjd9_ILaFwUd4-zCH8oY4v6jSJ4X8L34eG4FtZZw9xYuyXDd0U5yi-YoB1CEh5TjD6LyjK1x_BDjIMc7KM5StPQFtSEvWSNKOv1zJSaKEpnrui183Jbr-fOpZHPbaWqt4AYg8srjCxRDnp1F0XzCnuJcOIJ8QGqcWwHoWYcgSNCjGob08DK0F2jPKmcB3-qgceQpMXSy6tmcmdFmDBF2l8ymRHFH5ccvTofu56Jr8YfTq1tVBPOFifwnfgqeIB6Z3GUDPzbfgDuSQJLsDE-0WZO5U45oL6WnEOmgU5BCn3f72v_h0E-2cX_QjABl0bQ_mKjGQDnzWow-lmHn_K5Owr5PO_SzR8MYZOMj4M09QHFrQWZptJKM2kVIbVo_cnlMd4JAi3294K0_4qkYEjY82gf0ZZrwrfjCDhX1G1GwfG6lPbTOe15zjxaJ7-LvVeYrMZi1mIHZMnR9nYj3BKI63ClIxj-3Ek9o0nymLQ7d0KU5-Y-unKzOF5q_wuawXtm4FT57JkCy9CJsTJGysgcaiagEgfmY7jUez60FLUygLBmmXGqDz1lq4ARvajJmZn7RSclkttosPkyBX_41VPSG-NPgPnmMfi05vVmg0ot3IOU7AFKAnUe8HGO8rN089rmY0qHfX-HIqBJqp6bUlfXCQMOgDp6V6EYRrHnpT822JMmAKERWkX1aeUP4khBH1EaUiRcTCSvOfbpAw_9p11S5DoNrzyJ9oOwtKK6_c2COQD4SKTcbFCU9f_s1BbP8oAds4ocaYrCFx7bYUxp5JQK0L2iuAQIwsWbObL6PNeAXglLrbNKYN7-RIPKN86HKoZt3xxEqbe3IH3qk16ybnsgU3wAZaCBKRAZv4OxhK-FrZCysMpEswNjuTVxaxd_ZnTvjpgaYGBFPDx-f_CwT0Mvat2f55ROMsch6ohh9ylwVD4tHypXp9TFBHDZ4etlfcbLwwfrjA6PDOKbZHmQvNPLooHfFNeCHLIwPbzDZCL5bKBfyozIiLi7tVNZWQAMrWYRHiLTLTHEME3BI_sOS9LW3_WX44EJmULIKqoPP6QJToF_qKFPjmEtZOGr43hn2CeBHH7mIG-31UaPkmQnEmPJ1WduGJH9I8BKuQw24rq0FqAdWnL6_5s61G5EBVws2iB9YJMynKtL3IQmfL3sMtXDSTddTZvLT4qLU2AO8bBnWyc1cEy1H_UGng3h5_HnUqth0MNw2AumujQkHe-Qw04w4oMPJKpZWkAFEZY2Fu_0JZgPovQIYxqvLZrLs2aK50EF0vWjLO2TIriwUKQNuWN2VYagxA79izlaRBEmZFX8tHw-IVwyGxoF5EpzENV8yAog_egf53-kK5gNFALPFCknwhIoPx_cymkA3yog5bBE_0T1sc-T3mlr-V4Qe6oGFh4a8VHk4LvuD7i5PrvzBgxraN5202rLYEBHEcLRsNtPZQfFrQ9haLG2cNjuY_n_Uui-V8htBBhHSpBk2bGEI27N0uuxh_sjR0L9ehTQLjO1VGijG9u_gz2bf1ZCg3LRgXr1FwP73CE1y7_NFqdSSE-WSc_7r3_R6yqciCdoXwDcG7q7u_s89c7dlSucwOFPxG1kcKZbriF14TDloZ2YfAk7ln16w4y5pFn6H0Feuo3TkAT3aodelmSu4lP5Cu41aLyPKxP1kw_6uWDlwAMUVey-4He4Ilqv7a858App6vGuye23rxJI1y1ZsHQOYkg9pG26Rdh4zW75Kp3SnwfhUSzwsZl6pK2zPwCAeE4mZteC6ML6EaqaE6ADCF2yw1zU5RTmVsNw3BXRot7AXM57rKwnt9CvgsEbzmHsxYuqMdez2LTB0x-AdLMjU0ACWUmlSGLxB7CKumRj2HqkdKX8C4Q4Dn0Wv2SO1v1fZelslYRytJwPyldS3Ws-wB5m1tmvSGyyofbG2T5FTLC1Aklm0bSjNmN387rRc3MSveFFVYnSlE3Af3eFNhWAt0jFVtbkx3Z745DhSjSRB3RjCLRpS-o1w2aoHDzzdV8RedwL21gd6UL4YN6trQyWkzmatPrjK_
' Generated on: 2026-06-27T19:03:22.415223800

@startuml POO_atv3
skinparam classAttributeIconSize 0
hide circle

class Biblioteca {
  -livros: List<Livro>
  -usuarios: List<Usuario>
  -emprestimos: List<Emprestimo>
  -persistencia: Persistencia
  --
  +Biblioteca()
  +Biblioteca(persistencia: Persistencia)
  +cadastrarLivro(livro: Livro): void
  +cadastrarUsuario(usuario: Usuario): void
  +buscarLivroPorCodigo(codigo: int): Livro
  +buscarLivroPorCódigo(codigo: int): Livro
  +buscarUsuarioPorId(id: int): Usuario
  +buscarUsuarioPorID(id: int): Usuario
  +buscarUsuario(id: int): Usuario
  +buscarUsuarioPorNome(nome: String): void
  +buscarLivroPorTitulo(titulo: String): void
  +buscarLivroPorAutor(autor: String): void
  +listarLivrosCadastrados(): void
  +listarUsuariosCadastrados(): void
  +listarTodos(): void
  +listarLivros(): void
  +listarLivrosEmprestados(): void
  +listarLivrosEmprestadosPorUsuario(idUsuario: int): void
  +listarUsuariosComEmprestimos(): void
  +realizarEmprestimo(codigoLivro: int, idUsuario: int): void
  +realizarDevolucao(codigoLivro: int, idUsuario: int): void
  +realizarDevolucao(codigoLivro: int): void
  -buscarEmprestimoAtivo(codigoLivro: int, idUsuario: int): Emprestimo
  +adicionarQuantidadeLivro(codigoLivro: int, quantidade: int): void
  +removerQuantidadeLivro(codigoLivro: int, quantidade: int): void
  +carregarDados(): void
  +gravarDados(): void
  +getLivros(): List<Livro>
  +getUsuarios(): List<Usuario>
  +getEmprestimos(): List<Emprestimo>
}

class Bibliotecario {
  +Bibliotecario(id: int, nome: String, email: String)
  +getPrazoEmprestimo(): int
  +getTipo(): String
  +toCsv(): String
  +toString(): String
}

class Emprestimo {
  -livro: Livro
  -usuario: Usuario
  -dataEmprestimo: LocalDate
  -dataPrevistaDevolucao: LocalDate
  --
  +Emprestimo(livro: Livro, usuario: Usuario, dataEmprestimo: LocalDate, dataPrevistaDevolucao: LocalDate)
  +Emprestimo(livro: Livro, usuario: Usuario)
  +getLivro(): Livro
  +getUsuario(): Usuario
  +getDataEmprestimo(): LocalDate
  +getDataPrevistaDevolucao(): LocalDate
  +getDataEmp(): LocalDate
  +getDataDev(): LocalDate
  +getDatadev(): LocalDate
  +toCsv(): String
  +toString(): String
}

class Estudante {
  +Estudante(id: int, nome: String, email: String)
  +getPrazoEmprestimo(): int
  +getTipo(): String
  +toCsv(): String
  +toString(): String
}

class ArquivoInvalidoException {
  +ArquivoInvalidoException(mensagem: String)
}

class LivroIndisponivelException {
  +LivroIndisponivelException(mensagem: String)
}

class LivroNaoEncontradoException {
  +LivroNaoEncontradoException(mensagem: String)
}

class UsuarioNaoEncontradoException {
  +UsuarioNaoEncontradoException(mensagem: String)
}

interface Interface {
  ~toCsv(): String
}

class Livro {
  -codigo: int
  -titulo: String
  -autor: String
  -anop: int
  -quantidade: int
  --
  +Livro(codigo: int, titulo: String, autor: String, anop: int, quantidade: int)
  +Livro(codigo: int, titulo: String, autor: String, anop: int, disp: boolean)
  +getCodigo(): int
  +setCodigo(codigo: int): void
  +getTitulo(): String
  +setTitulo(titulo: String): void
  +getAutor(): String
  +setAutor(autor: String): void
  +getAnop(): int
  +setAnop(anop: int): void
  +getQuantidade(): int
  +setQuantidade(quantidade: int): void
  +isDisp(): boolean
  +emprestarUnidade(): void
  +devolverUnidade(): void
  +setDisp(disp: boolean): void
  -normalizarTexto(texto: String): String
  +toCsv(): String
  +toString(): String
}

class Main {
  -biblioteca: Biblioteca
  -usuarioLogado: Usuario = null
  -Console: JTextArea
  -txLogin: JTextField
  -txCodLivro: JTextField
  -txTitulo: JTextField
  -txAutor: JTextField
  -txAno: JTextField
  -txQtd: JTextField
  -txIdUsuario: JTextField
  -txSenha: JPasswordField
  -btLogin: JButton
  -btSair: JButton
  -btCadastrarLivro: JButton
  -btBuscarLivro: JButton
  -btListarTodos: JButton
  -btListarUsuarios: JButton
  -btEmprestimo: JButton
  -btDevolucao: JButton
  -btLogout: JButton
  --
  +Main()
  -TelaLog(): void
  -TelaSistema(): void
  -NTxt(texto: String): JLabel
  -redirecionarConsole(): void
  +actionPerformed(e: ActionEvent): void
  -fazerLogin(): void
  -cadastrarLivro(): void
  -buscarLivro(): void
  -listarLivros(): void
  -listarUsuarios(): void
  -realizarEmprestimo(): void
  -realizarDevolucao(): void
  -salvarDados(): void
  -limparCamposBusca(): void
  -limparCampos(): void
  +{static} main(args: String[]): void
}

class Persistencia {
  -arqLivros: File
  -arqUsuarios: File
  -arqEmprestimos: File
  --
  +Persistencia()
  +Persistencia(arqLivros: String, arqUsuarios: String, arqEmprestimos: String)
  +gravarDados(livros: List<Livro>, usuarios: List<Usuario>, emprestimos: List<Emprestimo>): void
  +carregarDados(): DadosBiblioteca
  -verificarDiretorio(arquivo: File): void
  -salvarLista(arquivo: File, lista: List<? extends Interface>): void
  -carregarLivros(): List<Livro>
  -carregarUsuarios(): List<Usuario>
  -carregarEmprestimos(livros: List<Livro>, usuarios: List<Usuario>): List<Emprestimo>
  -validarTokens(tokens: String[], esperado: int, arquivo: String): void
  -validarIdNaoNegativo(id: int, campo: String): void
  -validarCodigoNaoNegativo(codigo: int, campo: String): void
  -validarQuantidadeNaoNegativa(quantidade: int, campo: String): void
  -parseQuantidadeLivro(valor: String): int
  -acharLivro(livros: List<Livro>, codigo: int): Livro
  -acharUsuario(usuarios: List<Usuario>, id: int): Usuario
}

class DadosBiblioteca {
  -livros: List<Livro>
  -usuarios: List<Usuario>
  -emprestimos: List<Emprestimo>
  --
  +DadosBiblioteca(livros: List<Livro>, usuarios: List<Usuario>, emprestimos: List<Emprestimo>)
  +getLivros(): List<Livro>
  +getUsuarios(): List<Usuario>
  +getEmprestimos(): List<Emprestimo>
}

abstract class Usuario {
  -id: int
  -nome: String
  -email: String
  --
  +Usuario(id: int, nome: String, email: String)
  -normalizarNome(nome: String): String
  -normalizarEmail(email: String): String
  +getId(): int
  +setId(id: int): void
  +getNome(): String
  +setNome(nome: String): void
  +getEmail(): String
  +setEmail(email: String): void
  +getPrazoEmprestimo(): int
  +getTipo(): String
  +toCsv(): String
  +toString(): String
}

class BibliotecarioTest {
  -bibliotecario: Bibliotecario
  --
  +setUp(): void
  +testCriacaoBibliotecario(): void
  +testPrazoEmprestimoBibliotecario(): void
  +testToCsvBibliotecario(): void
}

class BibliotecaTest {
  ~pastaTemporaria: Path
  -biblioteca: Biblioteca
  -arquivoLivros: Path
  -arquivoUsuarios: Path
  -arquivoEmprestimos: Path
  --
  ~setUp(): void
  ~deveCadastrarLivro(): void
  ~deveCadastrarUsuario(): void
  ~deveValidarPrazoDiferenciadoPolimorfismo(): void
  ~deveRealizarEmprestimo(): void
  ~deveRealizarDevolucao(): void
  ~deveEscreverArquivos(): void
  ~deveLerArquivos(): void
  ~deveLerArquivoAntigoComTrueFalse(): void
  ~deveLancarExcecaoQuandoLivroNaoForEncontrado(): void
  ~deveLancarExcecaoQuandoUsuarioNaoForEncontrado(): void
  ~deveLancarExcecaoQuandoDevolverLivroNaoEncontrado(): void
  ~deveLancarExcecaoQuandoLivroEstiverIndisponivel(): void
  ~deveLancarExcecaoQuandoArquivoForInvalido(): void
  ~deveAvisarQuandoIdDeUsuarioJaExistir(): void
  ~deveAvisarQuandoCodigoDeLivroJaExistir(): void
  ~deveRemoverEspacosNoInicioEFimDosTextos(): void
  ~deveCarregarArquivosMesmoComEspacosExtras(): void
  ~deveAdicionarQuantidadeLivro(): void
  ~deveRemoverQuantidadeLivro(): void
  ~naoDeveRemoverQuantidadeMaiorQueDisponivel(): void
  ~deveSalvarECarregarQuantidadeCorretamente(): void
  ~deveImpedirMesmoUsuarioPegarMesmoLivroDuasVezes(): void
  ~deveDevolverLivroDoUsuarioCorretoQuandoMesmoLivroTemMaisDeUmEmprestimo(): void
  ~metodoAntigoNaoDeveDevolverQuandoExistemVariosEmprestimosDoMesmoLivro(): void
}

class EmprestimoTest {
  -livro: Livro
  -usuario: Usuario
  -emprestimo: Emprestimo
  -dataEmp: LocalDate
  -dataPrev: LocalDate
  --
  +setUp(): void
  +testCriacaoEmprestimo(): void
  +testToCsv(): void
}

class EstudanteTest {
  -estudante: Estudante
  --
  +setUp(): void
  +testCriacaoEstudante(): void
  +testPrazoEmprestimoEstudante(): void
  +testToCsvEstudante(): void
}

class LivroTest {
  -livro: Livro
  --
  +setUp(): void
  +testCriacaoLivroComQuantidade(): void
  +testCriacaoLivroComBooleanTrue(): void
  +testCriacaoLivroComBooleanFalse(): void
  +testEmprestarUnidade(): void
  +testEmprestarAteFicarIndisponivel(): void
  +testNaoEmprestarQuandoQuantidadeForZero(): void
  +testDevolverUnidade(): void
  +testSetQuantidade(): void
  +testSetQuantidadeZeroDeixaIndisponivel(): void
  +testNaoPermitirQuantidadeNegativaNoConstrutor(): void
  +testNaoPermitirQuantidadeNegativaNoSetQuantidade(): void
  +testRemoverEspacosNoTituloEAutor(): void
  +testToCsvComQuantidade(): void
  +testSetDispFalseCompatibilidade(): void
  +testSetDispTrueCompatibilidade(): void
}

class UsuarioTest {
  +testEstudanteComHerancaEPolimorfismo(): void
  +testBibliotecarioComHerancaEPolimorfismo(): void
  +testRemoverEspacosNoInicioEFimDosDados(): void
  +testToCsvEstudante(): void
  +testToCsvBibliotecario(): void
  +testToStringEstudanteContemDadosPrincipais(): void
  +testToStringBibliotecarioContemDadosPrincipais(): void
}

Biblioteca o-- Livro
Biblioteca o-- Usuario
Biblioteca o-- Emprestimo
Biblioteca *-- Persistencia
Bibliotecario --|> Usuario
Emprestimo ..|> Interface
Emprestimo *-- Livro
Emprestimo *-- Usuario
Estudante --|> Usuario
Livro ..|> Interface
Main *-- Biblioteca
Main *-- Usuario
Persistencia ..> DadosBiblioteca
Persistencia ..> Livro
Persistencia ..> Usuario
DadosBiblioteca o-- Livro
DadosBiblioteca o-- Usuario
DadosBiblioteca o-- Emprestimo
Usuario ..|> Interface
BibliotecarioTest *-- Bibliotecario
BibliotecaTest *-- Biblioteca
EmprestimoTest *-- Livro
EmprestimoTest *-- Usuario
EmprestimoTest *-- Emprestimo
EstudanteTest *-- Estudante
LivroTest *-- Livro
@enduml